--- a/CMAsnapLandingPage/index.html
+++ b/CMAsnapLandingPage/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
-<body class="">
-    <header class="container color-1">
-        <nav class="navbar navbar-expand-lg container d-flex justify-content-between" >
+<body>
+    <header class="container-fluid color-1 px-5">
+        <nav class="navbar navbar-expand-lg d-flex justify-content-between me-5" >
             <div>
                 <a class="navbar-brand" id="logo" href="#">
                     <img class="card-img-top" src="images/mainLogo.png" />
@@ -21,72 +21,82 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link active" href="#">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Pricing</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-                        <li class="nav-item"><a class="btn btn-success" class="nav-link" href="#">Login</a></li>
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
+                        <li class="nav-item p-3"><a class="nav-link link-success active" href="#">About</a></li>
+                        <li class="nav-item p-3"><a class="nav-link link-success" href="#">Services</a></li>
+                        <li class="nav-item p-3"><a class="nav-link link-success" href="#">Pricing</a></li>
+                        <li class="nav-item p-3"><a class="nav-link link-success" href="#">Contact</a></li>
+                        <li class="nav-item p-3"><a class="btn btn-success btn-lg" class="nav-link" href="#">Login</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
-    <main class="container" id="main">
-        <section class="color-1 row align-items-center ps-5">  
-                <div class="col-4 ps-4">
-                    <h1>CMAsnap</h1>
-                    <h4>Save time. Make Money</h4>
-                    <button class="btn btn-success">REQUEST A TRAIL</button>
+    <main>
+        <section class="color-1 container-fluid px-5">
+                <div class="row">
+                    <div class="col-md mt-5 ms-5 ps-5 pt-5">
+                        <h1>CMAsnap</h1>
+                        <h4>Save time. Make Money</h4>
+                        <button class="btn btn-success mt-3 btn-lg">REQUEST A TRAIL</button>
+                    </div>
+                    <div class="col-sm-6">
+                        <img class="card-img-top" src="images/screensPhoto.png" alt="" />
+                    </div>
                 </div>
-                <div class="col-6 p-5">
-                    <img class="card-img-top" src="images/screensPhoto.png" alt="" />
+        </section>
+        <section class="color-2 container-fluid align-items-center my-4 px-5">
+            <div class="row  py-5">
+                <img class="col-md-4" src="images/womanTablet.png" alt="" />
+                <div class="col-sm-6 mx-auto p-5">
+                    <h3 class="pt-5">What is CMAsnap®?</h3>
+                    <p>CMAsnap lets REALTORS produce a branded, accurate one page CMA from anywhere, on any device in a fraction of the time it takes using the MLS. Simply enter the subject property address and get a full comp set in under 10 seconds. Choose the most appropiate comps from the list and CMAsnap does the rest.</p>    
                 </div>
-        </section>
-        <section class="color-2 row align-items-center my-4">
-            <img class="col-4" src="images/womanTablet.png" alt="" />
-            <div class="col-6 mx-auto p-5">
-                <h3 class="bodyHeaderText pt-5">What is CMAsnap®?</h3>
-                <p>CMAsnap lets REALTORS produce a branded, accurate one page CMA from anywhere, on any device in a fraction of the time it takes using the MLS. Simply enter the subject property address and get a full comp set in under 10 seconds. Choose the most appropiate comps from the list and CMAsnap does the rest.</p>    
             </div>
         </section>
-        <section class="color-1 row align-items-center">
-            <div class="col-6 ">            
-                <h3 class="bodyHeaderText p-5">Watch this video</h3>
-            </div>
-            <img class="col-4 card-img-end" src="images/video1.png"></img>
-        </section>
-        <section class="banner-1 row m-5">
-            <h2 class="col-7" id="trailText">Request a free trail today or contact us to learn more.</h2>
-            <div class="col-2">
-                <button class="btn btn-success">CONTACT US</button>
+        <section class="color-1 container-fluid align-items-center p-5">
+            <div class="row p-5">
+                <div class="col-4">            
+                    <h3 class="ps-5 pt-5 mt-5">Watch</h3>
+                    <h3 class="ps-5">this video</h3>
+                    <img class='ps-5 mx-5 d-none d-lg-block' src="images/arrow.png" alt="">
+                </div>
+                <img class="col-sm-7 card-img-end" src="images/video1.png"></img>
             </div>
         </section>
-        <section class="color-2 section-1 row m-5">
-            <div class="row mb-5">
-                <img class="card-img-start col-4" src="images/video2.png"></img>
-                <div class="col">
-                    <h3 class="bodyHeaderText">What Our Customers Say</h3>
+        <section class="banner-1 container-fluid py-5">
+            <div class="px-5 text-white row d-flex justify-content-center">
+                <h2 class="col-md-5">Request a free trail today or contact us to learn more.</h2>
+                <div class="col-md-2 middle">
+                    <button class="btn btn-success btn-lg">CONTACT US</button>
+                </div>
+            </div>
+        </section>
+        <section class="color-2 section-1 container-fluid my-5 pt-5 px-5">
+            <div class="row mb-5 px-5">
+                <img class="card-img-start col-md-6" src="images/video2.png"></img>
+                <div class="col-md-4 mt-4 ms-5 ps-5">
+                    <h3 class="mb-5 col-7">What Our Customers Say</h3>
                     <p>We're proud to give the best possible service available to the clients we serve. Hear how CMAsnap is making a difference for some your colleagues, helping them save time and produce more!</p>
                 </div>
             </div>
-            <div class="row">
-                <div class="innerCardText col">
-                    <h3 class="bodyHeaderText">CMAsnap® Is Wherever You Are</h3>
+            <div class="d-flex flex-row-reverse align-items-center p-5">
+                <img class="card-img-end col-md-6" src="images/manPhone.png" alt="">
+                <div class="col-md-4 me-5">
+                    <h3>CMAsnap® Is Wherever You Are</h3>
                     <p>Never say "Let me go back to the office to pull comps" again!</p>
                     <p>CMAsnap lets you run fast and accurate pricing reports on the spot from any device, including automated adjustments on major catagories and full market condition analysis.</p>
                 </div>
-                <img class="card-img-end col-4" src="images/manPhone.png" alt="">
             </div>
         </section>
-        <section class="mainSection color-1 row my-5 p-5">
+        <section class="color-1 container-fluid my-5 p-5">
             <div class="row mx-5">
                 <h3 class="bodyHeaderText pt-5">Pricing</h3>
             </div>
-            <div class="row m-5">
-                <div class="col-5">
-                    <div class="card h-100">
-                        <img class="card-img row ms-1" src="images/purchaseLogo.png" alt="" />
+            <div class="row m-5 middle">
+                <div class="col-md-5 mt-5">
+                    <div class="card h-100 border-light border-2 shadow rounded-3">
+                        <img class="card-img w-100" src="images/purchaseLogo.png" alt="" />
                         <div id="card-body row">
                             <p class="card-text ms-5">Streamline Navigation</p>
                             <p class="card-text ms-5">Instant Price Feedback</p>
@@ -108,9 +118,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-5">
-                    <div class="card h-100 rounded">
-                        <img class="card-img-top mt-5 ms-1 row" src="images/purchaseLogoPro.png" alt="">
+                <div class="col-md-5 mt-5">
+                    <div class="card h-100 border-light border-2 rounded-3 shadow">
+                        <img class="card-img-top mt-5 w-100" src="images/purchaseLogoPro.png" alt="">
                         <div id="card-body row">
                             <p class="card-text ms-5">Streamline Navigation</p>
                             <p class="card-text ms-5">Instant Price Feedback</p>
@@ -134,36 +144,43 @@
                 </div>
             </div>
         </section>
-        <section class="mainSection color-2 row">
-            <div class="row">
-                <h3 class="bodyHeaderText">Contact Us</h3>
+        <section class="container-fluid color-2 my-5 px-5">
+            <div class="px-5">
+                <h3 class="pb-3">Contact Us</h3>
                 <p>Need a question answered? Want to learn more about CMAsnap?</p>
                 <p> Reach out to us and we'll respond as soon as we can.</p>    
             </div>
-            <form class="row d-flex justify-content-center" method="post">
-                <div class="row col-9">
-                    <div class="mb-3 col">
-                        <input type="text" id="fullName" name="fullName" placeholder="Full Name*" required minlength="4" maxlength="25" size="25">
+            <form class="px-5" method="post">
+                <div class="d-flex justify-content-between row mb-3">
+                    <div class="col-md">
+                        <div class="form-outline ">
+                            <input class="form-control border border-warning" type="text" id="fullName" name="fullName" placeholder="Full Name*" required minlength="4" maxlength="25">
+                        </div>
                     </div>
-                    <div class="mb-3 col">
-                        <input type="email" id="email" name="email" placeholder="Email*" required minlength="4" maxlength="25" size="25">
+                    <div class="col-md">
+                        <div class="form-outline">
+                            <input class="form-control border border-warning" type="email" id="email" name="email" placeholder="Email*" required minlength="4" maxlength="25">
+                        </div>
                     </div>
-                    <div class="mb-3 col">
-                        <input type="tel" id="phoneNumber" name="phoneNumber" placeholder="Phone Number" required minlength="4" maxlength="25" size="25">
+                    <div class="col-md">
+                        <div class="form-outline">
+                            <input class="form-control border border-warning" type="tel" id="phoneNumber" name="phoneNumber" placeholder="Phone Number" required minlength="4" maxlength="25">
+                        </div>
                     </div>
                 </div>
-                <div class="mb-3 row col-9">
-                    <textarea rows="7" cols="75" placeholder="Type Message"></textarea>
+                <div >
+                    <textarea class="form-control border border-warning" rows="7" cols="75" placeholder="Type Message"></textarea>
                 </div>
-                <div class="mb-3 align-self-center">
-                    <button class="btn btn-success col-2 center">SEND MESSAGE</button>
+                <div class="d-flex justify-content-center mt-5">
+                    <button class="btn btn-success">SEND MESSAGE</button>
                 </div>
             </form>
         </section>
     </main>
-    <footer class="container banner-1 d-flex row pt-5 text-white">
-        <div class="col" id="logo">
+    <footer class="container-fluid banner-1 d-flex pt-5 text-white">
+        <div class="col-md" id="logo">
             <img  src="images/footerLogo.png" />
+            <p>Copyright Valuease, Inc. 2017. All Rights Reserved</p>
         </div>
         <div class="navbar navbar-expand-lg col container d-flex justify-content-between" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -173,7 +190,7 @@
                 <li class="nav-item"><a class="nav-link link-light" href="#">Contact</a></li>
             </ul>
         </div>
-        <div class="col-2">
+        <div class="col-md-2">
             <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="white" class="bi bi-facebook border border-white rounded ps-1" viewBox="0 0 16 16">
                 <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
             </svg>
@@ -181,7 +198,7 @@
                 <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"/>
             </svg>  
         </div>
-        <p class=>Copyright Valuease, Inc. 2017. All Rights Reserved</p>
+        
     </footer>
 </body>
 </html>
