--- a/index.html
+++ b/index.html
@@ -295,28 +295,27 @@
       </div>
     </section>
   </main>
-  <footer class="container-fluid banner-1 text-white">
-    <div class="container d-flex pt-5">
-      <div class="col-md">
-        <img src="/images/logo-white.png" style="max-width: 400px;" />
-        <p>Copyright Valuease, Inc. 2022. All Rights Reserved</p>
-      </div>
-      <div class="navbar navbar-expand-lg col container d-flex justify-content-between" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link link-light" href="#about">About</a></li>
-          <li class="nav-item"><a class="nav-link link-light" href="#services">Services</a></li>
-          <li class="nav-item"><a class="nav-link link-light" href="#pricing">Pricing</a></li>
-          <li class="nav-item"><a class="nav-link link-light" href="#contact">Contact</a></li>
-        </ul>
+  <footer class="container-fluid banner-1 text-white pt-5">
+    <div class="container">
+      <div class="row d-flex align-items-center">
+        <div class="col-md-6">
+          <img src="/images/logo-white.png" style="max-width: 400px;" />
+          <p>Copyright Valuease, Inc. 2022. All Rights Reserved</p>
+        </div>
+        <div class="col-md-6">
+          <ul class="d-flex justify-content-between list-unstyled">
+            <li><a class="link-light" href="#about">About</a></li>
+            <li><a class="link-light" href="#services">Services</a></li>
+            <li><a class="link-light" href="#pricing">Pricing</a></li>
+            <li><a class="link-light" href="#contact">Contact</a></li>
+          </ul>
+        </div>
       </div>
     </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
-
-
-
 </body>
 
 </html>
