--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
             <li class="nav-item p-3"><a class="nav-link link-success" href="#pricing">Pricing</a></li>
             <li class="nav-item p-3"><a class="nav-link link-success" href="#contact">Contact</a></li>
             <li class="nav-item p-3">
-              <a class="btn btn-success btn" class="nav-link" href="https://app.cmasnap.com">Login</a>
+              <a class="btn btn-warning btn text-nowrap" class="nav-link" href="https://app.cmasnap.com/signup">Sign Up</a>
             </li>
             <li class="nav-item p-3">
-              <a class="btn btn-warning btn text-nowrap" class="nav-link" href="https://app.cmasnap.com/signup">Sign Up</a>
+              <a class="btn btn-success btn" class="nav-link" href="https://app.cmasnap.com">Login</a>
             </li>
           </ul>
         </div>
@@ -78,7 +78,7 @@
             <div class="d-flex flex-column align-items-center justify-content-center h-100">
               <h1>CMAsnap<small>&#174;</small></h1>
               <h4>Save time. Make Money</h4>
-              <button class="btn btn-success mt-3 btn-lg">REQUEST A TRIAL</button>
+              <button class="btn btn-success mt-3 btn-lg">GET STARTED</button>
             </div>
           </div>
           <div class="col-md-6 d-flex justify-content-center">
